# engageIQ

./: .env.example  .eslintrc.js  .gitignore  CLAUDE.md  EngageIQ_Feature_Guide.md  ORCHESTRATION.md  docker-compose.yml  package.json  pnpm-lock.yaml  roadmap.md  tsconfig.base.json  turbo.json
apps/api/: package.json  (+2 more)
apps/ml-service/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/ml-service/app/: __init__.py  config.py  main.py  schemas.py
apps/ml-service/app/models/: __init__.py  churn.py  fake_order.py  ltv.py  recommendations.py  rfm.py  segment_discovery.py
apps/ml-service/app/training/: __init__.py  registry.py  synthetic.py
apps/ml-service/tests/: conftest.py  test_api.py  test_churn_ltv.py  test_fake_order.py  test_ltv_bgnbd.py  test_recommendations.py  test_rfm.py  test_segment_discovery.py
docs/: DESIGN_SYSTEM.md  PROJECT_OVERVIEW.md
memory/: context.md
scripts/: preflight.sh  start-local.sh
updates/: 2026-04-27_phase1_clickhouse-setup.md  2026-04-27_phase1_postgres-schema.md  2026-04-27_phase1_project-scaffold.md  2026-04-28_phase1_auth-rbac.md  2026-04-28_phase2_shopify-app-oauth.md  2026-04-28_phase2_webhook-pipeline.md  2026-04-29_phase2_historical-backfill.md  2026-04-29_phase2_storefront-sdk.md  2026-05-02_phase3_identity-resolution.md  2026-05-02_phase3_profile-aggregation.md  2026-06-02_phase3_custom-event-api-multi-store.md  2026-06-07_phase4_segment-builder.md  2026-06-10_phase4_journey-executor.md  2026-06-28_integration_wave1.md  2026-06-28_phase0_schema-freeze.md  2026-06-28_phase4_analytics-engine.md  (+19 more)
(+385 files in other folders)
